Edited website to personal

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <section class="wrapper">
     <div class="content">
-      <p class="main-paragraph">I am a <span>Responsive Designer & Developer</span> who thrives on visual storytelling.
-        When I'm not working, pursuing side projects, or getting lost in the rabbit hole of CSS hacks and font pairings,
-        I can be found traveling and searching for new stories to tell.</p>
+      <p class="main-paragraph">I am a <span>Responsive Designer & Developer</span> who thrives on intruiging visual design.
+        When I'm not working, pursuing side projects, or getting lost in the rabbit hole of CSS and website layout,
+        I can be found traveling and searching for more stories to be told through what I create.</p>
     </div>
   </section>
 </body>
